--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@hapi/inert": "^7.0.0",
     "@hapi/vision": "^7.0.0",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "handlebars": "^4.7.7",
     "hapi-auth-jwt2": "^10.4.0",
